top-align the big forms to prevent jumping when switching tabs

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -11,13 +11,20 @@
     flex-grow: 1;
     display: flex;
     align-items: center;
-    justify-content: center;
     max-width: 740px;
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
     margin-top: 1.5rem;
     flex-direction: column;
+}
+
+.verticalcenter {
+  justify-content: center;
+}
+
+.topdown {
+  justify-content: normal;
 }
 
 .content [role=tablist] {
